<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculatorLoise</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnlogin">Login</string>
    <string name="btnregister">Register</string>
    <string name="etemail">EmailAddress</string>
    <string name="etpassword">Password</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSubmit">submit</string>
    <string name="etfirstname">Firstname</string>
    <string name="etid">ID_No</string>
    <string name="etno1">no1</string>
    <string name="etno2">no2</string>
    <string name="etresults">Results</string>
    <string name="btnmultiply">X</string>
    <string name="btnDivid">/</string>
    <string name="btnadd">+</string>
    <string name="btnSubtract">-</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="title_activity_home_screen">HomeScreen</string>

</resources>
